@@ -3,6 +3,7 @@
 /**
  * Dropper that contains a solute in solution form.
  * Origin is at the center of the hole where solution comes out of the dropper (bottom center).
+ * Optionally displays the pH value on the dropper.
  *
  * @author Chris Malley (PixelZoom, Inc.)
  */
@@ -11,15 +12,19 @@ define( function( require ) {
 
   // imports
   var Circle = require( 'SCENERY/nodes/Circle' );
-  var HTMLText = require( 'SCENERY/nodes/HTMLText' );
   var Image = require( 'SCENERY/nodes/Image' );
   var inherit = require( 'PHET_CORE/inherit' );
   var MovableDragHandler = require( 'PH_SCALE/common/view/MovableDragHandler' );
   var Node = require( 'SCENERY/nodes/Node' );
   var Path = require( 'SCENERY/nodes/Path' );
   var PhetFont = require( 'SCENERY_PHET/PhetFont' );
+  var PHScaleConstants = require( 'PH_SCALE/common/PHScaleConstants' );
+  var Rectangle = require( 'SCENERY/nodes/Rectangle' );
   var Shape = require( 'KITE/Shape' );
+  var Text = require( 'SCENERY/nodes/Text' );
   var ToggleButton = require( 'PH_SCALE/common/view/ToggleButton' );
+  var StringUtils = require( 'PHETCOMMON/util/StringUtils' );
+  var Util = require( 'DOT/Util' );
 
   // images
   var dropperForegroundImage = require( 'image!PH_SCALE/dropper_foreground.png' );
@@ -27,6 +32,9 @@ define( function( require ) {
   var buttonPressedImage = require( 'image!PH_SCALE/red_button_pressed.png' );
   var buttonUnpressedImage = require( 'image!PH_SCALE/red_button_unpressed.png' );
   var buttonDisabledImage = require( 'image!PH_SCALE/red_button_disabled.png' );
+
+  // strings
+  var pattern_ph_0value = require( 'string!PH_SCALE/pattern.ph.0value' );
 
   // constants
   var DEBUG_ORIGIN = false;
@@ -43,10 +51,14 @@ define( function( require ) {
   /**
    * @param {Dropper} dropper
    * @param {ModelViewTransform2} mvt
-   * @param {boolean} showLabel
+   * @param {*} options
    * @constructor
    */
-  function DropperNode( dropper, mvt, showLabel ) {
+  function DropperNode( dropper, mvt, options ) {
+
+    options = _.extend( {
+      showPH: false
+    }, options );
 
     var thisNode = this;
 
@@ -65,47 +77,45 @@ define( function( require ) {
       .lineTo( TIP_WIDTH / 2, -TIP_HEIGHT )
       .lineTo( TIP_WIDTH / 2, 0 )
       .close();
-    var fluid = new Path( fluidShape );
+    var fluidNode = new Path( fluidShape );
 
-    // images
+    // images, origin moved to bottom center
     var foreground = new Image( dropperForegroundImage );
     var background = new Image( dropperBackgroundImage );
+    foreground.x = -foreground.width / 2;
+    foreground.y = -foreground.height;
+    background.x = -background.width / 2;
+    background.y = -background.height;
 
-    // label
-    var label = new HTMLText( dropper.soluteProperty.get().name, { font: new PhetFont( { size: 18, weight: 'bold' } ), fill: 'black' } );
+    // translucent background, so the value shows up on all solution colors
+    var valueBackground = new Rectangle( 0, 0, 0.75 * fluidNode.width, 0.6 * fluidNode.height, 5, 5, { fill: 'rgba( 240, 240, 240, 0.6 )', lineWidth: 0 } );
+    valueBackground.centerX = fluidNode.centerX;
+    valueBackground.centerY = foreground.top + LABEL_Y_OFFSET;
 
-    // label background, so the label shows up on various fluid colors
-    var labelBackground = new Path( null, { fill: 'rgba( 240, 240, 240, 0.6 )', lineWidth: 0 } );
+    // pH value, rotated and scaled to fit
+    var valueNode = new Text( createPHString( PHScaleConstants.PH_RANGE.max ), { font: new PhetFont( { size: 18, weight: 'bold' } ), fill: 'black' } );
+    valueNode.setRotation( -Math.PI / 2 );
+    valueNode.setScaleMagnitude( Math.min( ( 0.9 * valueBackground.width ) / valueNode.width, ( 0.9 * valueBackground.height ) / valueNode.height ) );
 
+    // button, centered in the dropper's bulb
     var button = new ToggleButton( buttonUnpressedImage, buttonPressedImage, buttonDisabledImage,
       dropper.onProperty, dropper.enabledProperty, { onWhilePressed: true } );
     button.touchArea = Shape.circle( button.width / 2, button.height / 2, ( button.width / 2 ) + 30 );
     button.setScaleMagnitude( 0.3 );
+    button.x = foreground.centerX - ( button.width / 2 );
+    button.y = foreground.top + BUTTON_Y_OFFSET;
 
     // rendering order
-    thisNode.addChild( fluid );
+    thisNode.addChild( fluidNode );
     thisNode.addChild( background );
     thisNode.addChild( foreground );
-    if ( showLabel ) {
-      thisNode.addChild( labelBackground );
-      thisNode.addChild( label );
+    if ( options.showPH ) {
+      thisNode.addChild( valueBackground );
+      thisNode.addChild( valueNode );
     }
     thisNode.addChild( button );
     if ( DEBUG_ORIGIN ) {
       thisNode.addChild( new Circle( { radius: 3, fill: 'red' } ) );
-    }
-
-    // layout
-    {
-      // move origin to bottom center (tip) of images
-      foreground.x = -foreground.width / 2;
-      foreground.y = -foreground.height;
-      background.x = -background.width / 2;
-      background.y = -background.height;
-      // center the button in the dropper's bulb
-      button.x = foreground.centerX - ( button.width / 2 );
-      button.y = foreground.top + BUTTON_Y_OFFSET;
-      //NOTE: label will be positioned whenever its text is set, to keep it centered in the dropper's glass
     }
 
     // Update location
@@ -123,30 +133,28 @@ define( function( require ) {
 
     // Make the background visible only when the dropper is empty
     dropper.emptyProperty.link( function( empty ) {
-      fluid.setVisible( !empty );
+      fluidNode.setVisible( !empty );
       background.setVisible( empty );
     } );
 
+    // updates the pH value
+    var pHObserver = function( pH ) {
+      // pH value
+      valueNode.text = createPHString( pH );
+      // center the label in its translucent background
+      valueNode.centerX = valueBackground.centerX;
+      valueNode.centerY = valueBackground.centerY;
+    };
+
     // Change the label and color when the soluteProperty changes.
-    dropper.soluteProperty.link( function( solute ) {
+    dropper.soluteProperty.link( function( solute, oldSolute ) {
 
-      // label, centered in the dropper's glass
-      label.setText( solute.name );
-
-      // rotate to vertical, center the label in the droppers glass
-      label.setRotation( -Math.PI / 2 );
-      label.centerX = foreground.centerX;
-      label.y = foreground.bottom - ( foreground.height - LABEL_Y_OFFSET ) + ( label.height / 2 );
-
-      // translucent background for the label, so that it's visible on all solution colors
-      var width = 1.5 * label.width;
-      var height = 1.2 * label.height;
-      var x = label.centerX - ( width / 2 );
-      var y = label.centerY - ( height / 2 );
-      labelBackground.setShape( Shape.roundRect( x, y, width, height, 5, 5 ) );
+      // rewire the pH observer
+      if ( oldSolute ) { solute.pHProperty.unlink( pHObserver ); }
+      solute.pHProperty.link( pHObserver );
 
       // fluid color
-      fluid.fill = solute.colorProperty.get();
+      fluidNode.fill = solute.colorProperty.get();
     } );
 
     // touch area
@@ -157,6 +165,11 @@ define( function( require ) {
     // drag handler
     thisNode.addInputListener( new MovableDragHandler( dropper, mvt ) );
   }
+
+  // Formats a pH values for labeling the dropper, eg 'pH 11.00'
+  var createPHString = function( pH ) {
+    return StringUtils.format( pattern_ph_0value, Util.toFixed( pH, PHScaleConstants.PH_METER_DECIMAL_PLACES ) );
+  };
 
   inherit( Node, DropperNode, {
     getTipWidth: function() {
